[Mac]Fixed Incognito Divider Color

Bug: 725602
Change-Id: I8fa72810823c50aee56dcd3d766a5c3030073f85
Reviewed-on: https://chromium-review.googlesource.com/513027
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#474058}
Former-commit-id: 6f7158a4e3131b3b47c007f5aa8970ccbce01ca3